@@ -1,10 +1,0 @@
-
-$c->{host} = "devel.eprints.org";
-
-$c->{port} = 80;
-
-$c->{aliases} = [
-];
-
-$c->{securehost} = "";
-$c->{securepath} = "";
