@@ -1,13 +1,0 @@
-
-$c->{dbname} = 'devel';
-
-$c->{dbhost} = 'localhost';
-
-#$c->{dbport} = 123;
-
-#$c->{dbsock} = '';
-
-$c->{dbuser} = 'devel';
-
-$c->{dbpass} = 'UIOHEiouh';
-
